--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <div class="column">
                     <div class="card">
                         <div class="card-content buttons is-centered">
-                            <button class="button is-info is-inverted is-large is-responsive is-rounded"><span
-                                    class="icon" id="newGame">
+                            <button class="button is-info is-inverted is-large is-responsive is-rounded"
+                                id="newGame"><span class="icon">
                                     <i class="bi bi-x-lg"></i>
                                 </span><span> New
                                     Game</span></button>
@@ -34,14 +34,14 @@
 
                                 <!-- Total Score -->
 
-                                <p class="subtitle is-3 ml-5 mt-3" id="totalScore1">100</p>
+                                <p class="subtitle is-3 ml-5 mt-3" id="totalScore1">0</p>
                             </div>
                             <div class="column is-half ">
                                 <p class="title 2">Player 2</p>
 
                                 <!-- Total Score -->
 
-                                <p class="subtitle is-3 ml-5 mt-3" id="totalScore2">100</p>
+                                <p class="subtitle is-3 ml-5 mt-3" id="totalScore2">0</p>
                             </div>
                         </div>
                         <!-- Current Score player 1-->
@@ -49,7 +49,7 @@
                         <div class="columns is-mobile">
                             <div class="column is-half is-offset-2">
                                 <div class="has-text-centered">
-                                    <p id="scoreBox1">0</p>
+                                    <p id="scoreBox1" class="title is-3">0</p>
                                 </div>
                             </div>
                             <!-- 
@@ -57,7 +57,7 @@
 
                             <div class="column is-half">
                                 <div class="has-text-centered">
-                                    <p id="scoreBox2">0</p>
+                                    <p id="scoreBox2" class="title is-3">0</p>
 
                                 </div>
                             </div>
