various changes in style js and html

--- a/index.html
+++ b/index.html
@@ -29,15 +29,16 @@
                         <!-- player label -->
 
                         <div class="columns is-mobile">
-                            <div class="column is-half is-offset-2">
+                            <div class="column is-half is-offset-2 mb-6">
                                 <p class="title 2">Player 1</p>
 
                                 <!-- Total Score -->
-
+                                <p class="title is-5 total">Total Score</p>
                                 <p class="subtitle is-3 ml-5 mt-3" id="totalScore1">0</p>
                             </div>
                             <div class="column is-half ">
                                 <p class="title 2">Player 2</p>
+                                <p class="title is-5 total">Total Score</p>
 
                                 <!-- Total Score -->
 
@@ -48,6 +49,7 @@
 
                         <div class="columns is-mobile">
                             <div class="column is-half is-offset-2">
+                                <p class="title is-5">Current Score</p>
                                 <div class="has-text-centered">
                                     <p id="scoreBox1" class="title is-3">0</p>
                                 </div>
@@ -56,9 +58,9 @@
                                 Current Score player 2 -->
 
                             <div class="column is-half">
+                                <p class="title is-5">Current Score</p>
                                 <div class="has-text-centered">
                                     <p id="scoreBox2" class="title is-3">0</p>
-
                                 </div>
                             </div>
                         </div>
