--- a/index.html
+++ b/index.html
@@ -33,42 +33,54 @@
                                 <p class="title 2">Player 1</p>
 
                                 <!-- Total Score -->
+
                                 <p class="title is-5 total">Total Score</p>
-                                <p class="subtitle is-3 ml-5 mt-3" id="totalScore1">0</p>
+                                <p class="subtitle is-3 ml-6 mt-3 total" id="totalScore1">0</p>
                             </div>
                             <div class="column is-half ">
                                 <p class="title 2">Player 2</p>
                                 <p class="title is-5 total">Total Score</p>
 
+
                                 <!-- Total Score -->
 
-                                <p class="subtitle is-3 ml-5 mt-3" id="totalScore2">0</p>
+                                <p class="subtitle is-3 ml-6 mt-3 total2" id="totalScore2">0</p>
                             </div>
                         </div>
                         <!-- Current Score player 1-->
 
                         <div class="columns is-mobile">
-                            <div class="column is-half is-offset-2">
+                            <div class="column is-one-third has-text-centered box1">
                                 <p class="title is-5">Current Score</p>
-                                <div class="has-text-centered">
+                                <div class="column has-text-centered is-offset-4">
                                     <p id="scoreBox1" class="title is-3">0</p>
                                 </div>
+                            </div>
+
+                            <!-- dice area -->
+
+                            <div class="column is-one-third has-text-centered" id="diceArea">
+                                <p>asdasd</p>
                             </div>
                             <!-- 
                                 Current Score player 2 -->
 
-                            <div class="column is-half">
+                            <div class="column is-one-third has-text-centered box2">
                                 <p class="title is-5">Current Score</p>
-                                <div class="has-text-centered">
+                                <div class="column has-text-centered is-offset-4">
                                     <p id="scoreBox2" class="title is-3">0</p>
                                 </div>
                             </div>
                         </div>
+
+                        <!-- buttons -->
+
                         <div class="columns">
-                            <div class="column is-half is-offset-2">
-                                <button class="button" id="rollDice">Roll Dice</button>
+                            <div class="column is-one-third has-text-centered">
+                                <button class="button ml-1" id="rollDice">Roll Dice</button>
                             </div>
-                            <div class="column is-half is-offset-0">
+                            <div class="column is-one-third"></div>
+                            <div class="column is-one-third has-text-centered">
                                 <button class="button" id="holdValue">Hold value</button>
                             </div>
                         </div>
