--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
 
                             <!-- dice area -->
 
-                            <div class="column is-one-third has-text-centered" id="diceArea">
-                                <p>asdasd</p>
+                            <div class="column is-one-third has-text-centered diceArea">
+                                <p class=""></p>
+                                <img src="C:\Downloads\dice\dice1.png" alt="" id="dice">
                             </div>
                             <!-- 
                                 Current Score player 2 -->
@@ -75,13 +76,18 @@
 
                         <!-- buttons -->
 
-                        <div class="columns">
+                        <div class="columns is-mobile">
                             <div class="column is-one-third has-text-centered">
                                 <button class="button ml-1" id="rollDice">Roll Dice</button>
                             </div>
                             <div class="column is-one-third"></div>
                             <div class="column is-one-third has-text-centered">
                                 <button class="button" id="holdValue">Hold value</button>
+                            </div>
+                        </div>
+                        <div class="columns messageArea">
+                            <div class="column is-full has-text-centered">
+                                <h1 id="message" class="title is-2"></h1>
                             </div>
                         </div>
                     </div>
