changes in js and  assets
fixed random dice values, fixed issues with random nnum generator and added assets

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
                     <div class="card">
                         <div class="card-content buttons is-centered">
                             <button class="button is-info is-inverted is-large is-responsive is-rounded"
-                                id="newGame"><span class="icon">
-                                    <i class="bi bi-x-lg"></i>
-                                </span><span> New
+                                id="newGame"><span> New
                                     Game</span></button>
                         </div>
 
@@ -61,7 +59,7 @@
 
                             <div class="column is-one-third has-text-centered diceArea">
                                 <p class=""></p>
-                                <img src="C:\Downloads\dice\dice1.png" alt="" id="dice">
+                                <img src="" alt="" id="dice">
                             </div>
                             <!-- 
                                 Current Score player 2 -->
