--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         </div>
                         <div class="columns messageArea">
                             <div class="column is-full has-text-centered">
-                                <h1 id="message" class="title is-2"></h1>
+                                <h1 id="message" class="title is-2 has-text-centered"></h1>
                             </div>
                         </div>
                     </div>
